--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>Самопознание и развитие себя.</li>
         <li>Разработка новых проектов.</li>
         <li>Отдых с любимой категорией женщин MILF.</li>
-        <li>Путешествия и дрезья.</li>
+        <li>Путешествия и друзья.</li>
       </ol>
     </div>
 
